# todo-app

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
entity/: Cargo.toml
entity/src/: users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220724_142602_create_tasks_table.rs  m20220724_214944_create_users_table.rs  main.rs
public/: authorization.css  todo_list.css
src/: main.rs  pool.rs
templates/: base.html.tera  edit_task_form.html.tera  login_page.html.tera  signup_page.html.tera  todo_list.html.tera
