[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.sea-orm]
version = "^0.9.0"